# welltory_testing

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.nginx  README.md  config.ini.template  docker-compose.yml  fake_redis.py  manage.py  mypy.ini  pyproject.toml  pytest.ini
resources/nginx/conf.d/: default.conf
service_api/: urls.py  views.py
service_data/: admin.py  apps.py  celery_tasks.py  models.py  serializers.py  urls.py  utils.py  views.py
service_data/migrations/: 0001_initial.py
service_data/tests/: test_api_deep.py  test_api_statuses.py  test_celery_tasks.py
service_import/: celery_tasks.py  redis.py  tests.py  urls.py  views.py
welltory_data_analysis/: asgi.py  celery.py  config_parsing.py  settings.py  urls.py  wsgi.py
